banner done, search bar not responsive

--- a/index.html
+++ b/index.html
@@ -70,12 +70,22 @@
                   </div>
                 </div>
               </div>
-            </div>
-            
+            </div>           
           </div>
         </div>
       </nav>
 
+      <!-- banner -->
+      <div class="d-flex align-items-center mt-3 container-fluid">
+      <div class="banner-legal container-fluid text-center w-100 py-5">
+        <h2 class="fs-1 fw-bold text-white mt-5">We Provide Effective <br> Legal Solutions</h2>
+        <p class="text-white-50 mt-5">There are many variations of passages of Lorem Ipsum available, but the majority <br> have suffered alteration in some form, by injected humour.</p>
+        <form class="d-flex mt-5 w-50 mx-auto pb-5" role="search">
+          <input class="form-control me-5" type="search" placeholder="Search your services" aria-label="Search">
+          <button class="btn-legal-2" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
     </header>
 
     <main>
