--- a/index.html
+++ b/index.html
@@ -201,6 +201,75 @@
     <p class="text-dark-emphasis text-center mt-3">There are many variations of passages of Lorem Ipsum available, but the majority have <br>suffered alteration in some form, by injected humour.</p>
   </section>
 
+  <section class="row row-cols-1 row-cols-md-2" >
+     
+    
+    <div class="col order-2 order-md-1"> 
+      <!-- Accordian -->
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item mb-3">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              What is the basic difference between flexbox and grid?
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p class="text-dark-emphasis text-left"> The basic difference between CSS Grid layout and CSS flexbox layout is that flexbox for layout in one dimension - either a row or a column. Grid was designed for two-dimensional layout - rows and columns at the same time. The two specifications share some common features.</p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item mb-3">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              What is the function of media query?
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p class="text-dark-emphasis text-left"> 
+                Media query is a css function which is used to make the webpage responsive for different sizes of device screen based on the breakpoints. Media queries allow you to apply CSS styles depending on a devie's general type (such as print vs screen) or other characteristics such as screen resolution or browser viewport width.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item mb-3">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Explain the CSS box model?
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p class="text-dark-emphasis text-left"> 
+                CSS Box Model is a module of CSS that defines the rectangular boxes—including their padding and margin—that are generated for elements and laid out according to the visual formatting model. A box in CSS consists of a content area, which is where any text, images, or other HTML elements are displayed. This is optionally surrounded by padding, a border, and a margin, on one or more sides. The box model describes how these elements work together to create a box as displayed by CSS.  
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item mb-3">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              What is semantic tag?
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p class="text-dark-emphasis text-left"> 
+                A semantic element clearly describes its meaning to both the browser and the developer.  Examples of non-semantic elements:  div and span - Tells nothing about its content.
+                Examples of semantic elements: form, table, and article - Clearly defines its content.   
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="col order-1 order-md-2">
+        <img class="w-100 h-75" src="./images/faq.png" alt="">
+      </div>
+  </section>
+
     </main>
 
     <footer>
